--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,4 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
-anyio=3.6.1=pyhd8ed1ab_1
-argon2_cffi=19.1.0=py38he774522_0
-bcrypt=3.2.0=py38h2bbff1b_1
-bzip2=1.0.8=h8ffe710_4
-ca-certificates=2022.07.19=haa95532_0
-cffi=1.15.1=py38h2bbff1b_0
-click=8.1.3=py38haa244fe_0
-cloudpickle=2.2.0=pypi_0
-colorama=0.4.5=pyhd8ed1ab_0
-cryptography=37.0.1=py38h21b164f_0
-fastapi=0.85.0=pyhd8ed1ab_0
-h11=0.14.0=pyhd8ed1ab_0
-idna=3.4=pyhd8ed1ab_0
-intel-openmp=2022.1.0=h57928b3_3787
-libblas=3.9.0=16_win64_mkl
-libcblas=3.9.0=16_win64_mkl
-libffi=3.4.2=h8ffe710_5
-liblapack=3.9.0=16_win64_mkl
-libsqlite=3.39.4=hcfcfb64_0
-libzlib=1.2.12=hcfcfb64_4
-mkl=2022.1.0=h6a75c08_874
-numpy=1.23.3=py38h8503d5b_0
-openssl=3.0.5=hcfcfb64_2
-pandas=1.5.0=py38h5846ac1_0
-passlib=1.7.4=py_0
-pip=22.2.2=pyhd8ed1ab_0
-pycparser=2.21=pyhd3eb1b0_0
-pydantic=1.10.2=py38h91455d4_0
-python=3.8.13=hcf16a7b_0_cpython
-python-dateutil=2.8.2=pyhd8ed1ab_0
-python_abi=3.8=2_cp38
-pytz=2022.4=pyhd8ed1ab_0
-request=2.83.1=0
-setuptools=65.4.1=pyhd8ed1ab_0
-six=1.16.0=pyh6c4a22f_0
-sniffio=1.3.0=pyhd8ed1ab_0
-sqlite=3.39.4=hcfcfb64_0
-starlette=0.20.4=pyhd8ed1ab_0
-tbb=2021.6.0=h91493d7_0
-tk=8.6.12=h8ffe710_0
-typing-extensions=4.4.0=hd8ed1ab_0
-typing_extensions=4.4.0=pyha770c72_0
-ucrt=10.0.20348.0=h57928b3_0
-uvicorn=0.18.3=py38haa244fe_0
-vc=14.2=hac3ee0b_8
-vs2015_runtime=14.29.30139=h890b9b1_8
-wheel=0.37.1=pyhd8ed1ab_0
-xz=5.2.6=h8d14728_0
+request
+fastapi
+uvicorn
+pandas
