--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[cod]
 *$py.class
 
 # C extensions
@@ -127,3 +126,17 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Database files
+*.db
+*.db-journal
+
+# Compiled Python files
+*.py[cod]
+
+# Editor/IDE configurations
+.vscode/
+.idea/
+
+# Database backups
+*.bak
